--- a/.gitignore
+++ b/.gitignore
@@ -112,9 +112,9 @@ ENV/
 
 
 # tmp data path
-/tmp/MNIST_data/*
-/tmp/cifar10_data/*
-/tmp/log/*
+tmp/MNIST_data/
+tmp/cifar10_data/
+tmp/log/
 
 # gan test file path
 /GAN/output/*
